# golemcli

./: Cargo.toml  README.md
.circleci/: config.yaml  config.yml
scripts/: coverage.sh
src/: args.rs  cli.rs  main.rs  wamp.rs
src/cli/: mod.rs  networkshow.rs  setpassword.rs
