[package]
name = "golemcli"
version = "0.1.0"
authors = ["Golem Project", "maaktweluit"]
description = "golemcli clone written in Rust"

[dependencies]
clap = "*"
wampire = { git = "https://github.com/maaktweluit/wampire", branch = "mwu/ssl-no-verify", features = ["ssl"] }
log = "*"
env_logger = "*"
eventual = "*"
prettytable-rs = "^0.7"
